# chatgpt-client

./: .gitignore  Cargo.toml
src/: api.rs  lib.rs
src/api/: request.rs
