[package]
name = "chatgpt-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple wrapper for prompting OpenAI's ChatGPT"
repository = "https://github.com/andristarr/chatgpt-client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
tokio-test = "*"